# qml-postgres-sql

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp
UI/: EditArea.qml  MainToolBar.qml  MainWindow.qml  TaskHeader.qml  TaskList.qml  main.qrc
include/: orm_pqxx.hpp  qml_client.hpp  qml_color_schemas.hpp  qml_init.hpp  qml_meta.hpp  qml_task.hpp  qml_task_model.hpp  types.hpp
source/: orm_pqxx.cpp  qml_client.cpp  qml_color_schemas.cpp  qml_init.cpp  qml_task.cpp  qml_task_model.cpp
